--- a/dirionic/www/templates/resourcebk.html
+++ b/dirionic/www/templates/resourcebk.html
@@ -1,15 +1,6 @@
-<!-- <ion-view view-title="Resources">
-  <ion-content>
-    <ion-list>
-      <ion-item ng-repeat="resource  in resources" href="#/app/resouces/{{resource.id}}">
-        {{resource.title}}
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-view> -->
-
-<ion-view  title="Resources">   
-<div class="tabs-top tabs-background-stable tabs-color-calm">
+<!-- <ion-view title="Resources">
+	
+ 	<!-- <div class="tabs-top tabs-background-stable tabs-color-calm">
     <div class="tabs tabs-icon-left">
         <a class="tab-item" href="#">
             <i class="icon ion-pricetag"></i>
@@ -36,16 +27,8 @@
             Innovation
         </a>
     </div>
-    <ion-content> 
-
     <div>hello</div>
-    <h1>hello2</h1> 
-
-     <ion-list>
-      <ion-item ng-repeat="resource  in resources" href="#/app/resouces/{{resource.id}}">
-        {{resource.title}}
-      </ion-item>
-    </ion-list>
+    <h1>hello2</h1> -->  -->
 
    <!-- 
     <ion-list>
@@ -56,10 +39,28 @@
        hello2
       </ion-item>
     </ion-list> -->
-</ion-content>
+
 
     </ion-view>
 
+    <!--List
+    <!-- <ion-list>
+      <ion-item ng-repeat="resource in resources" href="#/app/resource{{resource.id}}">
+        {{resource.title}}
+      </ion-item>
+    </ion-list>
+
+</ion-content> 
 
 
 
+
+<ion-view view-title="Resources">
+  <ion-content>
+    <ion-list>
+      <ion-item ng-repeat="reource in resouces" href="#">
+        {{resource.title}}
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-view>
