--- a/dirionic/www/templates/tabs.html
+++ b/dirionic/www/templates/tabs.html
@@ -15,6 +15,9 @@
   <ion-tab title="Materials" icon-off="ion-ios-box-outline" icon-on="ion-ios-box" href="#/app/resources">
     <ion-nav-view name="resources"></ion-nav-view>
   </ion-tab>
+   <ion-tab title="Resources" icon-off="ion-ios-box-outline" icon-on="ion-ios-box" href="#/app/resources2">
+    <ion-nav-view name="resources2"></ion-nav-view>
+  </ion-tab>
 
   <ion-tab title="Help" icon-off="ion-ios-help-outline" icon-on="ion-ios-help" href="#/app/help">
     <ion-nav-view name="help"></ion-nav-view>
